alla tester går gröna igen